WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131957
Errors passed to delegate methods should have recovery attempters
https://bugs.webkit.org/show_bug.cgi?id=131957
Summary
Errors passed to delegate methods should have recovery attempters
Anders Carlsson
Reported
2014-04-21 16:22:56 PDT
Errors passed to delegate methods should have recovery attempters
Attachments
Patch
(20.77 KB, patch)
2014-04-21 16:24 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-04-21 16:24:14 PDT
Created
attachment 229839
[details]
Patch
Anders Carlsson
Comment 2
2014-04-21 16:51:39 PDT
Committed
r167633
: <
http://trac.webkit.org/changeset/167633
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug